tolk-tester/tests/invalid-semantics/err-4318.tolk
struct Point {
    x: int
    y: int
}

fun Point.getX() {
    return self.x
}

/**
@compilation_should_fail
@stderr using `self` in a static method
 */
